--- a/frontend/index.html
+++ b/frontend/index.html
@@ -221,6 +221,16 @@
                 </button>
             </div>
 
+            <div id="activeFilters" class="active-filters" style="display: none;">
+                <div class="active-filter">
+                    <span class="filter-label">Active Filters:</span>
+                    <div class="filter-tags" id="filterTags"></div>
+                    <button class="btn-clear-all" id="clearAllFilters">
+                        <i class="fas fa-times-circle"></i> Clear All
+                    </button>
+                </div>
+            </div>
+
             <!-- Таблица задач -->
             <div class="table-container">
                 <table id="tasksTable">
